--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# ---> C++
 # Prerequisites
 *.d
 
@@ -6,6 +7,7 @@
 *.lo
 *.o
 *.obj
+*.txt.user
 
 # Precompiled Headers
 *.gch
@@ -30,3 +32,15 @@
 *.exe
 *.out
 *.app
+
+# ---> CMake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+
